# fwc-import

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
config/: config.json  config.json.backup
config/log/: config.json
figshare-import/: defs.py  parse_names.py  uploads.py
figshare_import/: conv.py  defs.py  figshare_eml.py  figshare_jsonld.py  parse_names.py  process_articles.py  run.py  run_data_upload.py  run_figshare_download.py  s01_upload_data.py  s02_create_metadata.py  test.py  uploads.py  utils.py
figshare_import/manifest/: figshare.jsonld
fwc_import/: conv.py  defs.py  run_data_upload.py  test.py  utils.py
fwc_import/manifest/: fwc_crosswalk.json
log/: config.json
