[tool.poetry]
name = "figshare-import"
version = "0.1.0"
description = "Import and convert Figshare data and records to a DataONE repository"
authors = ["Ian Nesbitt <nesbitt@nceas.ucsb.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"dataone.common" = "^3.5.2"
"dataone.libclient" = "^3.5.2"
pyld = {git = "https://github.com/datadavev/pyld.git", tag = "ddv-2.1.0"}

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
